# pyside2-embed-paraview

./: .gitignore  CMakeLists.txt  README.md  app.py  build-foo-bindings.sh  build.sh.example  run.sh.example  test.py
foo/: CMakeLists.txt  global.h  pyside_global.h  typesystem_foo.xml
libfoo/: CMakeLists.txt  build.sh  foo.cpp  foo.h  main.cpp  mywindow.ui
libpvWidget/: CMakeLists.txt  pvwidget.cpp  pvwidget.h  pvwidget.pro  pvwidget.ui
pypvBinding/: CMakeLists.txt  global.h  typesystem_pypvBinding.xml
